--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -27,8 +27,8 @@ jobs:
 
     - name: Sync Weibo
       env:
-        GITHUB_PAT: ${{ secrets.GITHUB_PAT }}
+        GIST_PAT: ${{ secrets.GIST_PAT }}
         BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
         GIST_SHORT_IDS_STR: ${{ secrets.GIST_SHORT_IDS_STR }}
       run: |
-        cross-env GITHUB_PAT=$GITHUB_PAT BOT_TOKEN=$BOT_TOKEN GIST_SHORT_IDS_STR=$GIST_SHORT_IDS_STR node sync.js
+        cross-env GIST_PAT=$GIST_PAT BOT_TOKEN=$BOT_TOKEN GIST_SHORT_IDS_STR=$GIST_SHORT_IDS_STR node sync.js
